ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: zeta-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    kubernetes.io/ingress.class: "nginx"
  namespace: default
spec:
  rules:
  - http:
      paths:
        - path: /app1(/|$)(.*)
          backend:
            serviceName: lightsout-service
            servicePort: 80
        - path: /app2(/|$)(.*)
          backend:
            serviceName: studjob-service
            servicePort: 1588
        - path: /static(/|$)(.*)
          backend:
            serviceName: studjob-service
            servicePort: 1588
